now has 3 sizes but cannot be overwritten

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   
   <body>
+    <button id="small">small</button>
+    <button id="medium">medium</button>
+    <button id="large">large</button>
     <div id="container">
     </div>
 
