now had a clear button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button id="small">small</button>
     <button id="medium">medium</button>
     <button id="large">large</button>
+    <button id="clear">clear</button>
     <div id="container">
     </div>
 
