supports multiple colors

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <button id="medium">medium</button>
     <button id="large">large</button>
     <button id="clear">clear</button>
+    <button id="red">red</button>
+    <button id="green">green</button>
+    <button id="blue">blue</button>
+    <button id="black">black</button>
     <div id="container">
     </div>
 
